--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,13 +7,25 @@ services:
       - ./templates:/etc/nginx/templates
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - "8080:80"
+      - "8080:8080"
     environment:
       - NGINX_HOST=quipo-maravilla.com
-      - NGINX_PORT=80
+      - NGINX_PORT=8080
     networks:
       proyecto-aaron:
         ipv4_address: 172.20.0.2
+  xampp:
+    image: tomsik68/xampp
+    volumes:
+      - ./api-si-2022:/opt/lampp/htdocs
+    environment:
+      TZ: UTC
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      proyecto-aaron:
+        ipv4_address: 172.20.0.3
   db:
     image: mysql:latest
     volumes:
@@ -27,7 +39,7 @@ services:
       MYSQL_DATABASE: db
     networks:
       proyecto-aaron:
-        ipv4_address: 172.20.0.3
+        ipv4_address: 172.20.0.4
 
 networks:
   proyecto-aaron:
