--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
   xampp:
     image: tomsik68/xampp
     volumes:
-      - ./api-si-2022:/opt/lampp/htdocs
+      - ./crud:/opt/lampp/htdocs
     environment:
       TZ: UTC
     ports:
@@ -35,6 +35,7 @@ services:
       - "3306:3306"
     environment:
       TZ: UTC
+      MYSQL_USER: user
       MSQL_ROOT_PASSWORD: r00t_p4ssw0rd
       MYSQL_DATABASE: db
     networks:
