--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,6 @@ http {
     include /etc/nginx/conf.d/*.conf;
 }
 
-server {
-  rewrite ^/(.*)$ http://172.20.0.3/$1 permanent;
+location ~ ^/(.*)$ {
+  return 307 http://172.20.0.4/$1
 }
