--- a/default.conf
+++ b/default.conf
@@ -6,6 +6,6 @@ server {
     access_log  /var/log/nginx/host.access.log  main;
 
     location ~ ^/(.*)$ {
-      return 200 http://172.20.0.3/api/2022-2/src/public/$1;
+      proxy_pass http://172.20.0.3/api/2022-2/src/public/$1;
     }
 }
