--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,7 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./templates:/etc/nginx/templates
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
     environment:
@@ -20,9 +19,6 @@ services:
       - ./crud:/opt/lampp/htdocs
     environment:
       TZ: UTC
-    ports:
-      - "8080:80"
-      - "443:443"
     networks:
       proyecto-aaron:
         ipv4_address: 172.20.0.3
@@ -31,9 +27,6 @@ services:
     volumes:
       - "./mysql/data:/var/lib/mysql"
       - "./start.sql:/docker-entrypoint-initdb.d/setup.sql"
-      - "./mysql.cnf:/etc/mysql/conf.d/mysql.cnf"
-    ports:
-      - "3306:3306"
     environment:
       TZ: UTC
       MYSQL_ROOT_PASSWORD: r00t_p4ssw0rd
@@ -50,5 +43,3 @@ networks:
       driver: default
       config:
         - subnet: "172.20.0.1/24"
-
-
